# OusterDecoder

./: .gitignore  README.md
cpp/: CMakeLists.txt  OusterDecoder.pckinfo  buildAndMovePkg.sh
cpp/local_interfaces/: OusterDecoder.h
cpp/src/: OusterDecoder.cpp
python/: pcap_parser.py  record_lidar.py  requirements.txt
